# blob

./: Makefile  README.md
blob/: Makefile  blob.opam  dune-project
blob/lib/database/: blobs.ml  buckets.ml  connect.ml  database.ml  dune
blob/lib/model/: blob.ml  bucket.ml  dune
blob/lib/server/: blobs.ml  dune  request.ml  response.ml  server.ml  store.ml
blob/test/: blob.ml  dune
notes/: Makefile  README.md  package-lock.json  package.json  shadow-cljs.edn
notes/public/: index.html
notes/resources/public/: index.html
notes/src/: App.tsx  constants.ts
notes/src/components/notes/: Notes.tsx
notes/src/notes/: api.cljs  config.cljs  core.cljs  db.cljs  events.cljs  routes.cljs  styles.cljs  subs.cljs  views.cljs
notes/src/notes/components/: dialog.cljs  editor.cljs  menu.cljs  sidebar.cljs
