(lang dune 3.6)

(name blob)

(generate_opam_files true)

(package
 (name blob)
 (depends
   (yojson (>= 1.7.0))
   (ppx_deriving_yojson (>= 3.6.1))
   (caqti (>= 1.9.0))
   (caqti-lwt (>= 1.9.0))
   (caqti-driver-postgresql (>= 1.9.1))
   (dream (>= 1.0.0~alpha4))
   (base (>= 0.16.0))
   (core (>= 0.16.0))
   (lwt_ppx (>= 2.1.0))
   (common (= ~dev))
   (ppx_inline_test (= 0.15.0))))