(lang dune 3.6)

(name blob)

(generate_opam_files true)

(package
 (name blob)
 (depends
   (yojson (= 2.1.1))
   (ppx_deriving_yojson (= 3.7.0))
   (caqti (= 1.9.0))
   (caqti-lwt (= 1.9.0))
   (caqti-driver-postgresql (= 1.9.1))
   (dream (= 1.0.0~alpha5))
   (lwt_ppx (= 2.1.0))
   (common (= ~dev))))